force-app/main/default/objects/Scorecard_History__c/Scorecard_History__c.object-meta.xml
<CustomObject>
    <label>Scorecard History</label>
    <nameField>
        <label>Scorecard History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scorecard History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>