force-app/main/default/objects/Scorecard_History__c/fields/Business_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Business_Criteria__c</fullName>
    <label>Account Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>