force-app/main/default/objects/Scorecard_History__c/fields/Date_of_Score_Update__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Score_Update__c</fullName>
    <label>Date of Score Update</label>
    <type>Date</type>
</CustomField>