force-app/main/default/objects/Scorecard_History__c/fields/Opportunity_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Criteria__c</fullName>
    <label>Opportunity Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>