force-app/main/default/objects/Scorecard_History__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <label>Opportunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>